--- a/singsing/pom.xml
+++ b/singsing/pom.xml
@@ -72,6 +72,13 @@
             <artifactId>spring-boot</artifactId>
             <version>2.0.2.RELEASE</version>
         </dependency>
+
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
     </dependencies>
 
 	<build>
