--- a/singsing/src/main/resources/application.properties
+++ b/singsing/src/main/resources/application.properties
@@ -1,6 +1,15 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/singsingdb
-spring.datasource.username=root
-spring.datasource.password=asdasdpoipoi
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
+
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/singsingdb
+#spring.datasource.username=root
+#spring.datasource.password=asdasdpoipoi
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL55Dialect
 
 spring.datasource.tomcat.max-wait=20000
 spring.datasource.tomcat.max-active=50
@@ -9,7 +18,8 @@ spring.datasource.tomcat.min-idle=15
 
 spring.jpa.generate-ddl=true
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL55Dialect
+
+
 spring.jpa.properties.hibernate.id.new_generator_mappings = false
 spring.jpa.properties.hibernate.format_sql = true
 
