--- a/singsing/src/main/resources/application.properties
+++ b/singsing/src/main/resources/application.properties
@@ -3,6 +3,9 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
+# Enabling H2 Console
+spring.h2.console.enabled=true
+
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 
@@ -23,7 +26,7 @@ spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.id.new_generator_mappings = false
 spring.jpa.properties.hibernate.format_sql = true
 
-logging.level.org.hibernate.SQL=INFO
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=INFO 
+logging.level.org.hibernate.SQL=TRACE
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 spring.resources.chain.cache=false
