--- a/singsing/src/main/resources/application.properties
+++ b/singsing/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 
 #spring.datasource.url=jdbc:mysql://127.0.0.1:3306/singsingdb
 #spring.datasource.username=root
-#spring.datasource.password=asdasdpoipoi
+#spring.datasource.password=asdasd
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL55Dialect
 
 spring.datasource.tomcat.max-wait=20000
